--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item shopping-item__checked">milk</span>
+        <span class="shopping-item">milk</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -66,6 +66,8 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+  <script src="app.js"></script>
 </body>
+
 </html>
